# indie_studio

./: .gitignore  .save.indie  CMakeLists.txt  Makefile  README  dll.sh  dllIrKlang.sh  save.indie  test.cpp
Debug/: bomberman.ilk
Src/: IndieStudio.hpp  Main.cpp  main.cpp
Src/Entity/: AEntity.cpp  AEntity.hpp  IEntity.hpp
Src/Entity/Bomb/: ABomb.cpp  ABomb.hpp  Bomb.cpp  Bomb.hpp  Timer.cpp  Timer.hpp
Src/Entity/Character/: ACharacter.cpp  ACharacter.hpp  Player.cpp  Player.hpp
Src/Entity/Character/AI/: AAI.cpp  AAI.hpp  ArtificialIntelligence.cpp  ArtificialIntelligence.hpp  LevelOne.cpp  LevelOne.hpp
Src/Entity/PowerUp/: APowerUp.cpp  APowerUp.hpp
Src/Entity/PowerUp/BombUp/: BombUp.cpp  BombUp.hpp
Src/Entity/PowerUp/FireUp/: FireUp.cpp  FireUp.hpp
Src/Entity/PowerUp/SpeedUp/: SpeedUp.cpp  SpeedUp.hpp
Src/Entity/PowerUp/WallPass/: WallPass.cpp  WallPass.hpp
Src/Entity/Scenery/Explosion/: Explosion.cpp  Explosion.hpp
Src/Entity/Scenery/UnbreakableWall/: UnbreakableWall.cpp  UnbreakableWall.hpp
Src/Entity/Scenery/Wall/: Wall.cpp  Wall.hpp
Src/GameEngine/: AManageIrrlicht.cpp  AManageIrrlicht.hpp  EventManager.cpp  EventManager.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  IManageIrrlicht.hpp  ManageIrrlicht.cpp  ManageIrrlicht.hpp  ManageObject.cpp  ManageObject.hpp
Src/MapGenerator/: MapGenerator.cpp  MapGenerator.hpp
Src/Tools/: Debug.hpp  ItemLocker.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
Win32/Debug/installIrrKlang/installIrrKlang.tlog/: custombuild.command.1.tlog  installIrrKlang.lastbuildstate
Win32/Debug/installIrrlicht/installIrrlicht.tlog/: custombuild.command.1.tlog
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
media/: bomb.b3d  bombup.b3d  explosion.b3d  fireup.b3d  map-20kdm2.txt  speedup.b3d  wall.b3d  wallpass.b3d
